--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .main {
   padding: 10px 20px;
 }
+
+input {
+  width: 300px;
+  font-size: 13px;
+  padding: 6px 0 4px 10px;
+  border: 1px solid #cecece;
+  background: #F6F6f6;
+  border-radius: 8px;
+}
+
