--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,38 @@
 .main {
-  padding: 10px 20px;
+  padding: 0;
+  margin: 0;
+}
+
+.form {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.form__list {
+  padding: 10px 0;
+  width: 200px;
+}
+
+.form__list-item {
+  display: flex;
+  justify-content: space-between;
 }
 
 input {
-  width: 300px;
+  width: 200px;
+  height: 20px;
   font-size: 13px;
   padding: 6px 0 4px 10px;
   border: 1px solid #cecece;
-  background: #F6F6f6;
-  border-radius: 8px;
+  background: #ffffff;
+  border-radius: 15px;
+  box-shadow: 4px 4px 10px rgba(0,0,0,0.06);
+}
+
+input:focus, input:active{
+  outline: none;
+  border: 1px solid #d2d2d2;
 }
 
